--- a/index.html
+++ b/index.html
@@ -5,32 +5,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="./style.css">
     <script>
         document.addEventListener('contextmenu', event => event.preventDefault());
     </script>
-
-    <style>
-        body {
-            margin: 0;
-        }
-
-        canvas {
-            display: block;
-        }
-    </style>
 </head>
 
 <body>
-    <script src="sketch.js"></script>
-    <script src="grid.js"></script>
-    <script src="charge.js"></script>
-    <div class="controller__container">
-        <div class="controllers">
-            <ul>
-                <li></li>
-            </ul>
-        </div>
+    <div class="controllers">
+        <button class="button__pos" onclick="charges.push(new Charge(width/2, height/2, 1, false))">Add positive
+            charge</button>
+        <button class="button__neg" onclick="charges.push(new Charge(width/2, height/2, -1, false));">Add negative
+            charge</button>
     </div>
+    <script src="js/sketch.js"></script>
+    <script src="js/grid.js"></script>
+    <script src="js/charge.js"></script>
 </body>
 
 </html>
