--- a/index.html
+++ b/index.html
@@ -1,108 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
 
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="./style.css" />
-    <script>
-      document.addEventListener("contextmenu", (event) =>
-        event.preventDefault()
-      );
-    </script>
-  </head>
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
 
-  <body>
-    <div class="controllers">
-      <button
-        class="button__pos btn btn-floating indigo pulse"
-        onclick="charges.push(new Charge(width/2, height/2, 1, false))"
-      >
-        +ve
-      </button>
-      <h6 class="white-text">Add Charge</h6>
-      <button
-        class="button__neg btn btn-floating red pulse"
-        onclick="charges.push(new Charge(width/2, height/2, -1, false));"
-      >
-        -ve
-      </button>
-    </div>
-    <div class="viewButtons">
-      <a href="#math-modal" class="modal-trigger"
-        ><button class="btn waves-effect waves-light">Math</button></a
-      >
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="./style.css" />
+  <script>
+    document.addEventListener("contextmenu", (event) =>
+      event.preventDefault()
+    );
+  </script>
+</head>
 
-      <a href="#summary-modal" class="modal-trigger"
-        ><button class="btn waves-effect waves-light">Summary</button></a
-      >
-    </div>
-    <div class="modal mathModal" id="math-modal">
-      <p
-        onclick="()=>{closeModal(`mathModal`)}"
-        class="modal-close"
-        style="
+<body>
+  <div class="controllers">
+    <button class="button__pos btn btn-floating indigo pulse" id="pos__button">
+      +ve
+    </button>
+    <h6 class="white-text">Add Charge</h6>
+    <button class="button__neg btn btn-floating red pulse" id="neg__button">
+      -ve
+    </button>
+  </div>
+  <div class="viewButtons">
+    <a href="#math-modal" class="modal-trigger"><button class="btn waves-effect waves-light">Math</button></a>
+
+    <a href="#summary-modal" class="modal-trigger"><button class="btn waves-effect waves-light">Summary</button></a>
+  </div>
+  <div class="modal mathModal" id="math-modal">
+    <p onclick="()=>{closeModal(`mathModal`)}" class="modal-close" style="
           font-weight: bolder;
           position: absolute;
           top: 0;
           right: 0;
           margin: 10px;
           cursor: pointer;
-        "
-      >
-        X
+        ">
+      X
+    </p>
+    <div class="container section">
+      <h5 class="center">Mathmetical Interpretations</h5>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quasi
+        quae ad autem ut. Molestiae nostrum velit libero aperiam facere.
       </p>
-      <div class="container section">
-        <h5 class="center">Mathmetical Interpretations</h5>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quasi
-          quae ad autem ut. Molestiae nostrum velit libero aperiam facere.
-        </p>
-      </div>
     </div>
+  </div>
 
-    <div class="modal summaryModal" id="summary-modal">
-      <p
-        onclick="()=>{closeModal(`summaryModal`)}"
-        class="modal-close"
-        style="
+  <div class="modal summaryModal" id="summary-modal">
+    <p onclick="()=>{closeModal(`summaryModal`)}" class="modal-close" style="
           font-weight: bolder;
           position: absolute;
           top: 0;
           right: 0;
           margin: 10px;
           cursor: pointer;
-        "
-      >
-        X
+        ">
+      X
+    </p>
+    <div class="container section">
+      <h5 class="center">Summary</h5>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam ex
+        architecto quod iste aliquid quos. Id corporis porro recusandae
+        voluptatem eveniet asperiores fugit. Explicabo, minima voluptas?
+        Ducimus quibusdam nesciunt aut?
       </p>
-      <div class="container section">
-        <h5 class="center">Summary</h5>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam ex
-          architecto quod iste aliquid quos. Id corporis porro recusandae
-          voluptatem eveniet asperiores fugit. Explicabo, minima voluptas?
-          Ducimus quibusdam nesciunt aut?
-        </p>
-      </div>
     </div>
+  </div>
 
-    <script src="js/sketch.js"></script>
-    <script src="js/grid.js"></script>
-    <script src="js/charge.js"></script>
-    <script>
-      M.AutoInit();
-      const closeModal = (className) => {
-        const modal = document.querySelector(`.${className}`);
-        M.Modal.getInstance(modal).close();
-      };
-    </script>
-  </body>
+  <script src="modes/circularMotion.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/grid.js"></script>
+  <script src="js/charge.js"></script>
+
+
+  <script>
+    M.AutoInit();
+    const closeModal = (className) => {
+      const modal = document.querySelector(`.${className}`);
+      M.Modal.getInstance(modal).close();
+    };
+  </script>
+</body>
+
 </html>
