circlular mode base done

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
 <body>
   <div class="controllers">
-    <button class="button__pos btn btn-floating indigo pulse" id="pos__button">
+    <button class="button__pos btn btn-floating red pulse" id="pos__button">
       +ve
     </button>
     <h6 class="white-text">Add Charge</h6>
-    <button class="button__neg btn btn-floating red pulse" id="neg__button">
+    <button class="button__neg btn btn-floating indigo pulse" id="neg__button">
       -ve
     </button>
   </div>
