--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </p>
     <div class="container section">
       <h5 class="center">Mathmetical Interpretations</h5>
-      <p>
+      <p id="maths__here">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quasi
         quae ad autem ut. Molestiae nostrum velit libero aperiam facere.
       </p>
@@ -64,8 +64,8 @@
       X
     </p>
     <div class="container section">
-      <h5 class="center">Summary</h5>
-      <p>
+      <h5 class="center">Remarks</h5>
+      <p id="remarks__here">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam ex
         architecto quod iste aliquid quos. Id corporis porro recusandae
         voluptatem eveniet asperiores fugit. Explicabo, minima voluptas?
