two charge in circular motion

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="modeChange">
       <div class="input-field">
         <select class="change-mode">
-          <option value="" disabled selected>Choose the module</option>
+          <option value="" disabled selected>Choose Mode</option>
           <option value="BasicModel">Basic Model</option>
           <option value="CircularMotion">Circular Motion</option>
         </select>
@@ -148,7 +148,7 @@
 
       // const circularMotion = document.querySelector(".circular");
       // circularMotion.addEventListener("click", () => {
-    
+
       // });
     </script>
   </body>
