field line added

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <option value="" disabled selected>Choose Mode</option>
         <option value="BasicModel">Basic Model</option>
         <option value="CircularMotion">Circular Motion</option>
+        <option value="FieldLine">Dipole On Linear Axis</option>
       </select>
     </div>
   </div>
