ratio mode added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <option value="BasicModel">Basic Model</option>
         <option value="CircularMotion">Circular Motion</option>
         <option value="FieldLine">Dipole On Linear Axis</option>
+        <option value="RatioBetweenForces">Ratio between forces</option>
       </select>
     </div>
   </div>
