null point base added

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <option value="CircularMotion">Circular Motion</option>
         <option value="FieldLine">Dipole On Linear Axis</option>
         <option value="RatioBetweenForces">Ratio between forces</option>
+        <option value="NullPoint">Null Point</option>
       </select>
     </div>
   </div>
