--- a/index.html
+++ b/index.html
@@ -106,7 +106,13 @@
     </div>
   </div>
 
-  <!-- <script src="modes/circularMotion.js"></script> -->
+  <script src="modes/circularMotion.js"></script>
+  <script src="modes/fieldLinesAndDipole.js"></script>
+  <script src="modes/nullPointBetweenCharge.js"></script>
+  <script src="modes/ratioBetweenForces.js"></script>
+
+
+
   <script src="js/modeChange.js"></script>
   <script src="js/main.js"></script>
   <script src="js/grid.js"></script>
