--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   </div>
   <div class="controllers">
     <div class="positive">
-    
       <button class="button__pos btn btn-floating red pulse" id="pos__button">
         +ve
       </button>
@@ -41,12 +40,18 @@
       <button class="button__neg btn btn-floating indigo pulse" id="neg__button">
         -ve
       </button>
-      <input min="1" max="10"  type="range" step="1" class="neg_input white-text" onchange="{
+      <input min="1" max="10" type="range" step="1" class="neg_input white-text" onchange="{
         document.querySelector('.negative_value').textContent= window.event.target.value
       }" />
       <p class="negative_value white-text">6</p>
+
     </div>
+    <div id="radius" class ="white-text">
+    <input type="number" value="100" min="80" max="200" class="radius "/>
+    <p>Enter Radius</p>
+</div>
   </div>
+  
   <div class="viewButtons">
     <a href="#math-modal" class="modal-trigger"><button class="btn waves-effect waves-light">Math</button></a>
 
