--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
     </div>
     <div id="radius" class ="white-text">
-    <input type="number" value="100" min="80" max="200" class="radius "/>
+    <input type="number" value="100" min="80" max="300" class="radius " step="10"
+     />
     <p>Enter Radius</p>
 </div>
   </div>
