--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
   <div class="viewButtons">
     <a href="#math-modal" class="modal-trigger"><button class="btn waves-effect waves-light">Math</button></a>
 
-    <a href="#summary-modal" class="modal-trigger"><button class="btn waves-effect waves-light">Remarks</button></a>
+    <a href="#summary-modal" class="modal-trigger"><button class="btn waves-effect waves-light">Remarks</button>
+
+    </a>
+    
   </div>
   <div class="modeChange">
     <div class="input-field">
